# Drone_Detection

./: .gitignore  README.md
cfg/: drone.data  yolov4-tiny-3l-drone-cl.cfg  yolov4-tiny-3l-drone.cfg  yolov4-tiny-drone.cfg
opencv/: main.cpp
python/: darknet.py  darknet_video.py
src/: CMakeLists.txt  improcess.cpp  improcess.h  main.cpp
